@@ -1,9 +1,10 @@
 package com.salesmanager.test.shop.integration.user;
 
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import javax.inject.Inject;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+
+import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.boot.test.web.client.TestRestTemplate;
@@ -11,7 +12,6 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit4.SpringRunner;
 import com.salesmanager.shop.application.ShopApplication;
 import com.salesmanager.shop.model.security.PersistableGroup;
 import com.salesmanager.shop.model.user.PersistableUser;
@@ -20,7 +20,6 @@ import com.salesmanager.shop.model.user.UserPassword;
 import com.salesmanager.test.shop.common.ServicesTestSupport;
 
 @SpringBootTest(classes = ShopApplication.class, webEnvironment = WebEnvironment.RANDOM_PORT)
-@RunWith(SpringRunner.class)
 public class UserApiIntegrationTest extends ServicesTestSupport {
   
   private static Long DEFAULT_USER_ID = 1L;
@@ -34,7 +33,7 @@ public class UserApiIntegrationTest extends ServicesTestSupport {
   public void getUser() throws Exception {
       final HttpEntity<String> httpEntity = new HttpEntity<>(getHeader());
 
-      final ResponseEntity<ReadableUser> response = testRestTemplate.exchange(String.format("/api/v1/private/users/" + DEFAULT_USER_ID), HttpMethod.GET,
+      final ResponseEntity<ReadableUser> response = testRestTemplate.exchange(("/api/v1/private/users/" + DEFAULT_USER_ID).formatted(), HttpMethod.GET,
               httpEntity, ReadableUser.class);
       if (response.getStatusCode() != HttpStatus.OK) {
           throw new Exception(response.toString());
@@ -64,7 +63,7 @@ public class UserApiIntegrationTest extends ServicesTestSupport {
       final HttpEntity<PersistableUser> persistableUser = new HttpEntity<PersistableUser>(newUser, getHeader());
 
       ReadableUser user = null;
-      final ResponseEntity<ReadableUser> response = testRestTemplate.exchange(String.format("/api/v1/private/user/"), HttpMethod.POST,
+      final ResponseEntity<ReadableUser> response = testRestTemplate.exchange("/api/v1/private/user/".formatted(), HttpMethod.POST,
           persistableUser, ReadableUser.class);
       if (response.getStatusCode() != HttpStatus.OK) {
           throw new Exception(response.toString());
@@ -84,7 +83,7 @@ public class UserApiIntegrationTest extends ServicesTestSupport {
       final HttpEntity<UserPassword> changePasswordEntity = new HttpEntity<UserPassword>(userPassword, getHeader());
 
       
-      final ResponseEntity<Void> changePassword = testRestTemplate.exchange(String.format("/api/v1/private/user/" + user.getId() + "/password"), HttpMethod.PATCH, changePasswordEntity, Void.class);
+      final ResponseEntity<Void> changePassword = testRestTemplate.exchange(("/api/v1/private/user/" + user.getId() + "/password").formatted(), HttpMethod.PATCH, changePasswordEntity, Void.class);
       if (changePassword.getStatusCode() != HttpStatus.OK) {
           throw new Exception(response.toString());
       } else {
